# Pobo

./: .gitignore  ChangeLog.md  README.md  build.gradle  settings.gradle
.github/: FUNDING.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  androidbuf.hpp  helpers.cpp  helpers.hpp  heuristics.cpp  heuristics.hpp  pobo.cpp  simulator.cpp  simulator.hpp
app/src/main/cpp/lib/include/ghost/: solver.hpp
app/src/main/cpp/model/: builder.cpp  builder.hpp  free_position.cpp  free_position.hpp  has_piece.cpp  has_piece.hpp  pobo_heuristic.cpp  pobo_heuristic.hpp  pobo_objective.cpp  pobo_objective.hpp  removed_positions.cpp  removed_positions.hpp
app/src/main/java/fr/richoux/pobo/: MainActivity.kt
app/src/main/java/fr/richoux/pobo/engine/: AI.kt  Board.kt  Game.kt
app/src/main/java/fr/richoux/pobo/engine/ai/: AI.kt  Decisions.kt  MCTS.kt  MCTS_GHOST.kt  PureHeuristics.kt  RandomPlay.kt  SimpleHeuristics.kt
app/src/main/java/fr/richoux/pobo/gamescreen/: BoardView.kt  CapturedView.kt  GameView.kt  GameViewModel.kt  PiecesStocksView.kt
app/src/main/java/fr/richoux/pobo/screens/: AboutView.kt  CustomModifier.kt  HowToPlayView.kt  TitleView.kt
app/src/main/java/fr/richoux/pobo/screens/gamescreen/: BelowBoardView.kt  BoardView.kt  GameView.kt  GameViewModel.kt  PiecesStocksView.kt
app/src/main/java/fr/richoux/pobo/titlescreen/: TitleView.kt
app/src/main/java/fr/richoux/pobo/ui/: Color.kt  Orientation.kt  Shape.kt  Theme.kt  Type.kt
app/src/main/res/drawable/: buy_me_a_coffee.xml  github.xml  google_play.xml  language_icon.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-ar/: strings.xml
app/src/main/res/values-cs/: strings.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-el/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-it/: strings.xml
app/src/main/res/values-iw/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-pl/: strings.xml
app/src/main/res/values-pt/: strings.xml
app/src/main/res/values-sk/: strings.xml
app/src/main/res/values-vi/: strings.xml
app/src/main/res/values-zh/: strings.xml
app/src/main/res/values-zh-rTW/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
xp_results/0.6.2/: expansion-playout_vs_full.txt  expansion_mirror.txt  expansion_vs_full.txt  full_mirror.txt  full_vs_expansion-playout.txt  full_vs_expansion.txt  full_vs_heuristics.txt  full_vs_playout.txt  full_vs_selection-expansion.txt  full_vs_selection-playout.txt  full_vs_selection.txt  full_vs_vanilla.txt  heuristics_mirror.txt  heuristics_vs_full.txt  notes.txt  playout_mirror.txt  playout_vs_full.txt  selection-expansion_vs_full.txt  selection-playout_vs_full.txt  selection_mirror.txt  selection_vs_full.txt  vanilla_mirror.txt  vanilla_vs_full.txt
